[package]
name = "jito-searcher-client"
version = "0.1.0-beta"
edition = "2021"
license = "Apache-2.0"

[dependencies]
bincode = "1.3.3"
bytes = "1.10.1"
futures = "0.3.31"
futures-util = "0.3.31"
jito-protos = { path = "../protos" }
log = "0.4.27"
prost-types = "0.13"
solana-client = "3.0.10"
solana-metrics = "3.0.10"
solana-perf = "3.1.4"
solana-sdk = "3.0.0"
thiserror = "2.0.12"
tokio = { version = "1.14.1", features = ["full"] }
tonic = { version = "0.13.1", features = ["tls-native-roots"] }
